// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-accordion> Component Default <bolt-accordion> w/o Shadow DOM renders 2`] = `
<div
  class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
  style=""
>
  <!---->
  <!---->
  
      
            
  <div
    class="c-bolt-accordion-item__trigger"
    style=""
  >
    <!---->
    
      
    <button
      class="c-bolt-accordion-item__trigger-button c-bolt-accordion-spacing--medium"
      style=""
    >
      
        
      <div
        class="c-bolt-accordion-item__trigger-content"
        style=""
      >
        
          
        <!---->
        <!---->
        <bolt-text
          class="is-first-child is-last-child"
          slot="trigger"
          style=""
        >
          Accordion item 1
        </bolt-text>
        <!---->
        <!---->
        
        
      </div>
      
        
      <span
        class="c-bolt-accordion-item__trigger-icons"
        style=""
      >
        
          
        <div
          class="c-bolt-accordion-item__trigger-icons-inner"
          style=""
        >
          
            
          <bolt-icon
            name="chevron-down"
            style=""
          />
          
          
        </div>
        
        
      </span>
      
      
    </button>
    
    
    <!---->
  </div>
  
          
    
  <!---->
  
      
  <div
    class="c-bolt-accordion-item__content"
    style=""
  >
    
        
    <div
      class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
      style=""
    >
      
          
      <!---->
      <!---->
      
          
      <!---->
      
          
      <!---->
      <bolt-text
        class="is-first-child is-last-child"
        style=""
      >
        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
      </bolt-text>
      <!---->
      
        
      <!---->
      <!---->
      
        
    </div>
    
      
  </div>
  
    
  <!---->
  <!---->
</div>
`;

exports[`<bolt-accordion> Component basic usage 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 1
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 2
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 3
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component expand single items: false 1`] = `
<bolt-accordion>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 1
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 2
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 3
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component expand single items: true 1`] = `
<bolt-accordion single>
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 1
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 2
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 3
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: large 1`] = `
<bolt-accordion spacing="large">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--large"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 1
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--large"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--large"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 2
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--large"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--large"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 3
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--large"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--large"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: medium 1`] = `
<bolt-accordion spacing="medium">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 1
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 2
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--medium"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 3
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--medium"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--medium"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: none 1`] = `
<bolt-accordion spacing="none">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--none"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 1
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--none"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--none"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 2
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--none"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--none"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 3
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--none"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--none"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: small 1`] = `
<bolt-accordion spacing="small">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--small"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 1
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--small"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--small"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 2
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--small"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--small"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 3
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--small"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--small"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;

exports[`<bolt-accordion> Component spacing: xsmall 1`] = `
<bolt-accordion spacing="xsmall">
  <replace-with-children class="c-bolt-accordion">
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--first-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--xsmall"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 1
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--xsmall"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--xsmall"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 2
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--xsmall"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
    <bolt-accordion-item>
      <input class="c-bolt-accordion-item__state"
             type="checkbox"
             id="c-bolt-accordion-item-12345"
      >
      <div class="c-bolt-accordion-item c-bolt-accordion-item--separator c-bolt-accordion-item--last-item"
           id="c-bolt-accordion-item-inner-12345"
      >
        <div class="c-bolt-accordion-item__trigger">
          <label class="c-bolt-accordion-item__trigger-label c-bolt-accordion-spacing--xsmall"
                 for="c-bolt-accordion-item-12345"
          >
            <div class="c-bolt-accordion-item__trigger-content">
              <div slot="trigger"
                   ssr-hydrate="keep"
              >
                Accordion item 3
              </div>
            </div>
          </label>
          <a href="#c-bolt-accordion-item-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--open c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Open Accordion
            </span>
          </a>
          <a href="#c-bolt-accordion-item-inner-12345"
             class="c-bolt-accordion-item__trigger-link c-bolt-accordion-item__trigger-link--close c-bolt-accordion-spacing--xsmall"
          >
            <span class="c-bolt-accordion-item__toggle-text">
              Close Accordion
            </span>
          </a>
        </div>
        <div class="c-bolt-accordion-item__content">
          <div class="c-bolt-accordion-item__content-inner c-bolt-accordion-spacing--xsmall"
               ssr-hydrate="keep-children"
          >
            This is the accordion content.
          </div>
        </div>
      </div>
    </bolt-accordion-item>
  </replace-with-children>
</bolt-accordion>
`;
